--- a/Bucky/EndViewController.xib
+++ b/Bucky/EndViewController.xib
@@ -31,11 +31,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="7S3-zi-brw">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="7S3-zi-brw">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MfJ-Ay-GMp">
-                    <rect key="frame" x="87" y="502" width="200" height="40"/>
+                    <rect key="frame" x="87" y="527" width="200" height="40"/>
                     <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="0E8-t7-7va"/>
@@ -55,13 +55,13 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y2p-WD-4yh">
-                    <rect key="frame" x="143" y="158.5" width="89" height="38"/>
+                    <rect key="frame" x="143" y="203.5" width="89" height="38"/>
                     <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="30"/>
                     <color key="textColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bdA-0E-WSw">
-                    <rect key="frame" x="87" y="422" width="200" height="40"/>
+                    <rect key="frame" x="87" y="447" width="200" height="40"/>
                     <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="Btj-S2-gLa"/>
@@ -82,31 +82,30 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Over" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axi-Bq-W0s">
-                    <rect key="frame" x="59" y="-30" width="256" height="51"/>
+                    <rect key="frame" x="59" y="45" width="256" height="51"/>
                     <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="40"/>
                     <color key="textColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Score" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="voQ-OY-Ei2">
-                    <rect key="frame" x="123.5" y="121" width="129.5" height="27.5"/>
+                    <rect key="frame" x="123.5" y="166" width="129.5" height="27.5"/>
                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                     <color key="textColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="High Score" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nwj-ln-r1u">
-                    <rect key="frame" x="136.5" y="246.5" width="102.5" height="27.5"/>
+                    <rect key="frame" x="136.5" y="291.5" width="102.5" height="27.5"/>
                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                     <color key="textColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tWo-zd-eMe">
-                    <rect key="frame" x="143" y="284" width="89" height="38"/>
+                    <rect key="frame" x="143" y="329" width="89" height="38"/>
                     <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="30"/>
                     <color key="textColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Y2p-WD-4yh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="1tR-Ax-fcA"/>
                 <constraint firstItem="Y2p-WD-4yh" firstAttribute="top" secondItem="voQ-OY-Ei2" secondAttribute="bottom" constant="10" id="6fb-jq-wBp"/>
@@ -114,14 +113,14 @@
                 <constraint firstAttribute="bottom" secondItem="7S3-zi-brw" secondAttribute="bottom" id="8mM-le-EMT"/>
                 <constraint firstItem="7S3-zi-brw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="AFu-dT-JXT"/>
                 <constraint firstItem="7S3-zi-brw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IN9-E5-Hkn"/>
-                <constraint firstItem="voQ-OY-Ei2" firstAttribute="top" secondItem="axi-Bq-W0s" secondAttribute="bottom" constant="100" id="Jdu-gO-9rG"/>
+                <constraint firstItem="voQ-OY-Ei2" firstAttribute="top" secondItem="axi-Bq-W0s" secondAttribute="bottom" constant="70" id="Jdu-gO-9rG"/>
                 <constraint firstItem="tWo-zd-eMe" firstAttribute="top" secondItem="nwj-ln-r1u" secondAttribute="bottom" constant="10" id="JjF-mi-gaB"/>
                 <constraint firstItem="nwj-ln-r1u" firstAttribute="top" secondItem="Y2p-WD-4yh" secondAttribute="bottom" constant="50" id="La8-kd-7Sq"/>
                 <constraint firstItem="nwj-ln-r1u" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PKo-FA-B4n"/>
                 <constraint firstItem="bdA-0E-WSw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="QPi-GX-UVg"/>
-                <constraint firstItem="bdA-0E-WSw" firstAttribute="top" secondItem="tWo-zd-eMe" secondAttribute="bottom" constant="100" id="RaG-9w-zDZ"/>
+                <constraint firstItem="bdA-0E-WSw" firstAttribute="top" secondItem="tWo-zd-eMe" secondAttribute="bottom" constant="80" id="RaG-9w-zDZ"/>
                 <constraint firstAttribute="trailing" secondItem="7S3-zi-brw" secondAttribute="trailing" id="cEU-PF-stK"/>
-                <constraint firstAttribute="bottom" secondItem="MfJ-Ay-GMp" secondAttribute="bottom" constant="125" id="e2a-xc-y6d"/>
+                <constraint firstAttribute="bottom" secondItem="MfJ-Ay-GMp" secondAttribute="bottom" constant="100" id="e2a-xc-y6d"/>
                 <constraint firstItem="axi-Bq-W0s" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jvy-ky-9Zj"/>
                 <constraint firstItem="voQ-OY-Ei2" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="mP0-gF-QZm"/>
                 <constraint firstItem="tWo-zd-eMe" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="rlr-Qh-qfe"/>
